; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao_openal.c_get_supported_format.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao_openal.c_get_supported_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"AL_FORMAT_MONO8\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"AL_FORMAT_MONO16\00", align 1
@AL_RENDERER = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [5 x i8] c"X-Fi\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"AL_EXT_float32\00", align 1
@AL_TRUE = common dso_local global i32 0, align 4
@AL_FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @get_supported_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_supported_format(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %28 [
    i32 128, label %5
    i32 130, label %10
    i32 129, label %15
    i32 131, label %22
  ]

5:                                                ; preds = %1
  %6 = call i32 @alGetEnumValue(i32* bitcast ([16 x i8]* @.str to i32*))
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %5
  store i32 128, i32* %2, align 4
  br label %30

9:                                                ; preds = %5
  br label %28

10:                                               ; preds = %1
  %11 = call i32 @alGetEnumValue(i32* bitcast ([17 x i8]* @.str.1 to i32*))
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  store i32 130, i32* %2, align 4
  br label %30

14:                                               ; preds = %10
  br label %28

15:                                               ; preds = %1
  %16 = load i32, i32* @AL_RENDERER, align 4
  %17 = call i32 @alGetString(i32 %16)
  %18 = call i32* @strstr(i32 %17, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  store i32 129, i32* %2, align 4
  br label %30

21:                                               ; preds = %15
  br label %28

22:                                               ; preds = %1
  %23 = call i32 @alIsExtensionPresent(i32* bitcast ([15 x i8]* @.str.3 to i32*))
  %24 = load i32, i32* @AL_TRUE, align 4
  %25 = icmp eq i32 %23, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %22
  store i32 131, i32* %2, align 4
  br label %30

27:                                               ; preds = %22
  br label %28

28:                                               ; preds = %1, %27, %21, %14, %9
  %29 = load i32, i32* @AL_FALSE, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %28, %26, %20, %13, %8
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @alGetEnumValue(i32*) #1

declare dso_local i32* @strstr(i32, i8*) #1

declare dso_local i32 @alGetString(i32) #1

declare dso_local i32 @alIsExtensionPresent(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
